[UI] fix: Add recipient too wide @escopecz

--- a/app/bundles/CoreBundle/Assets/css/app.css
+++ b/app/bundles/CoreBundle/Assets/css/app.css
@@ -1338,6 +1338,7 @@ code {
 }
 .btn {
   transition: var(--transition-all-productive);
+  width: fit-content;
 }
 .btn,
 .btn:active {
